# file-storages

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  tox.ini
src/: config.py  main.py  storage_objects.py  storages.py
src/file_storages/: __init__.py  file.py
src/file_storages/storages/: os.py  s3.py
src/file_storages/storages/_base/: storage.py  storage_object.py
tests/: config.py  conftest.py  test_main.py  test_primitive.py  test_storage.py  test_storage_objects.py
